--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ebiz</groupId>
+    <groupId>edu.neu.ccs</groupId>
     <artifactId>utils</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
@@ -23,7 +23,7 @@
         <commons-io.version>2.5</commons-io.version>
         <commons-codec.version>1.10</commons-codec.version>
         <commons-configuration.version>1.10</commons-configuration.version>
-        <fastjson.version>1.2.9</fastjson.version>
+        <fastjson.version>1.2.31</fastjson.version>
         <jjwt.version>0.9.0</jjwt.version>
         <oracle.driver.version>10.2.0.4.0</oracle.driver.version>
         <poi.version>3.9</poi.version>
@@ -113,7 +113,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.1.0</version>
+            <version>2.8.11.1</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -211,7 +211,7 @@
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
-            <version>4.1.0</version>
+            <version>4.8.0</version>
         </dependency>
         <!-- 添加jwt依赖 -->
         <dependency>
